kubernetes/apps/portainer/portainer/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
spec:
  hostnames:
    - portainer.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: portainer
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
